--- a/apps/templates/includes/charts.html
+++ b/apps/templates/includes/charts.html
@@ -136,5 +136,5 @@
       </div>
     </div>
   </div>
-  <button class="btn btn-primary" id="extra-chart" style="margin-left: 1%"><i class="material-icons">add</i> Add Extra Chart</button>
+  <button class="btn btn-primary" id="extra-chart" style="margin: 1% -1%;"><i class="material-icons">add</i> Add Extra Chart</button>
   
