--- a/apps/templates/pages/blog.html
+++ b/apps/templates/pages/blog.html
@@ -37,14 +37,14 @@
             </div>
             <div class="card-body px-0">
               <h5>
-                <a href="#" class="text-dark font-weight-bold">Ags file Validator</a>
+                <a href="{% url 'AGSValidator' %}" class="text-dark font-weight-bold">Ags file Validator</a>
               </h5>
               <p>
                 Get useful insights on your
                 geodata files or the files
                 you received.
               </p>
-              <a href="#" class="text-info text-sm icon-move-right">Coming Soon
+              <a href="{% url 'AGSValidator' %}"  class="text-info text-sm icon-move-right">Coming Soon
                 <i class="fas fa-arrow-right text-xs ms-1" aria-hidden="true"></i>
               </a>
             </div>
@@ -60,7 +60,7 @@
             </div>
             <div class="card-body px-0">
               <h5>
-                <a href="#" class="text-dark font-weight-bold">Convert
+                <a href="{% url 'AGSToExcel' %}" class="text-dark font-weight-bold">Convert
                   Ags
                   to excel</a>
               </h5>
@@ -71,7 +71,7 @@
                 ags
                 format) to excel
               </p>
-              <a href="#" class="text-info text-sm icon-move-right">Coming Soon
+              <a href="{% url 'AGSToExcel' %}" class="text-info text-sm icon-move-right">Coming Soon
                 <i class="fas fa-arrow-right text-xs ms-1" aria-hidden="true"></i>
               </a>
             </div>
