--- a/apps/templates/pages/tool/NSPT.html
+++ b/apps/templates/pages/tool/NSPT.html
@@ -32,17 +32,12 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" data-toggle="tab" href="#link8" role="tablist">
-                        <i class="material-icons">timeline</i> Activate
+                        <i class="material-icons">timeline</i> {%if not user_name == "" %} Activate {% else%} Run {%endif%}
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" data-toggle="tab" href="#link9" role="tablist">
                         <i class="material-icons">gavel</i> Reference
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#link10" role="tablist">
-                        <i class="material-icons">help_outline</i> Help Center
                     </a>
                 </li>
             </ul>
@@ -298,16 +293,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane" id="link10">
-                    <div class="card">
-                        <div class="card-header">
-                            <h5 class="card-title">Help center</h5>
-                        </div>
-                        <div class="card-body">
-
-                        </div>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </div>
