--- a/apps/templates/pages/tool/includes/RelativeDensityDetails.html
+++ b/apps/templates/pages/tool/includes/RelativeDensityDetails.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% block javascripts %}
 <script type="text/javascript" id="MathJax-script"
-		src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+		src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 {% endblock javascripts %}
 <div class="card">
