--- a/apps/templates/pages/tool/AGSToExcel.html
+++ b/apps/templates/pages/tool/AGSToExcel.html
@@ -101,11 +101,9 @@
                                         </div>
                                         <br>
                                         <div class="row tool-form">
-                                            <a  href="{% url 'tools' %}" ><button class="btn btn-rose" 
-                                                type="button">Back To Tools</button></a>
                                             <button class="btn btn-rose" type="reset" style="margin-left:1% ;">Reset</button>
                                             <button class="btn btn-rose" type="submit"
-                                                style="margin-left:1% ;">Upload</button>
+                                                style="margin-left:1% ;">Convert</button>
                                         </div>
                                     </div>
                                     <div class="col-md-2">
