--- a/apps/templates/pages/tool/NSPT.html
+++ b/apps/templates/pages/tool/NSPT.html
@@ -18,6 +18,12 @@
     #Maximum_N {
     display: none;
     }
+    table,
+    th,
+    td {
+        border: 1px solid #dddddd;
+        border-collapse: collapse;
+    }
 </style>
 <div class="row">
     <div class="col-md-10 ml-auto mr-auto">
