--- a/apps/templates/pages/blog.html
+++ b/apps/templates/pages/blog.html
@@ -44,7 +44,7 @@
                 geodata files or the files
                 you received.
               </p>
-              <a href="{% url 'AGSValidator' %}"  class="text-info text-sm icon-move-right">Coming Soon
+              <a href="{% url 'AGSValidator' %}"  class="text-info text-sm icon-move-right">Validate
                 <i class="fas fa-arrow-right text-xs ms-1" aria-hidden="true"></i>
               </a>
             </div>
@@ -71,7 +71,7 @@
                 ags
                 format) to excel
               </p>
-              <a href="{% url 'AGSToExcel' %}" class="text-info text-sm icon-move-right">Coming Soon
+              <a href="{% url 'AGSToExcel' %}" class="text-info text-sm icon-move-right">Convert
                 <i class="fas fa-arrow-right text-xs ms-1" aria-hidden="true"></i>
               </a>
             </div>
