--- a/apps/templates/pages/tool/generalindex.html
+++ b/apps/templates/pages/tool/generalindex.html
@@ -27,7 +27,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'AGSToExcel' %}" role="tablist">
-                  <i class="material-icons">timeline</i>On-line converter
+                  <i class="material-icons">timeline</i> Run the app
                 </a>
               </li>
             </ul>
@@ -35,13 +35,11 @@
           <div class="col-md-8">
             <div class="tab-content">
               <div class="tab-pane active" id="link50">
-                This is an easy-to-use AGS to excel file converter tool. Transform your .
-                ags files to .xls or csv files so you can review your data with ease.<br><br>
-
-                The tool gives you the option to generate a summary of your field and laboratory
-                data and get on the fly information of what’s included in your ags file.
-
-
+                This is an easy-to-use AGS to excel online file convertor. Transform your .ags 
+                files to .xlsx files so you can review your data with ease. <br><br>
+                The tool gives you the option to generate and include on the output useful 
+                summary tables for your field and laboratory data. Get on the fly information 
+                on what’s included in your ags files.
               </div>
             </div>
           </div>
@@ -66,7 +64,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'AGSValidator' %}" role="tablist">
-                  <i class="material-icons">timeline</i> On-line Validator
+                  <i class="material-icons">timeline</i> Run the app
                 </a>
               </li>
             </ul>
@@ -74,12 +72,10 @@
           <div class="col-md-8">
             <div class="tab-content">
               <div class="tab-pane active" id="link40">
-                This is an easy-to-use on-line AGS validation tool. Upload your 
-                .ags files to review and verify their format and content. <br><br>
-
-                Works for AGS 3.0, 4.0 or 4.1 formats in line with Association of Geotechnical 
-                  & Geoenvironmental Specialists (AGS.org).
-
+                This is an online AGS validation tool. Upload your .ags files to review and verify
+                their format and content.<br><br>
+                Works for AGS 3.0, 4.0 or 4.1 formats in line with Association of Geotechnical &
+                Geoenvironmental Specialists (AGS.org).
               </div>
             </div>
           </div>
