--- a/apps/templates/includes/landing/navbar.html
+++ b/apps/templates/includes/landing/navbar.html
@@ -16,33 +16,33 @@
         <ul class="navbar-nav navbar-nav-hover ms-auto">
           <li class="nav-item dropdown dropdown-hover mx-2">
             <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" href="{% url 'landing' %}">
-              <i class="material-icons opacity-6 me-2 text-md" >image</i>
+              <i class="material-icons  me-2 text-md" >home</i>
               Home
             </a>
           </li>
 
           <li class="nav-item dropdown dropdown-hover mx-2">
             <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" href="{% url 'blog' %}">
-              <i class="material-icons opacity-6 me-2 text-md" >poll</i>
+              <i class="material-icons  me-2 text-md" >poll</i>
               Geo-tools
             </a>
           </li>
           <li class="nav-item dropdown dropdown-hover mx-2">
             <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" href="{% url 'landing' %}#contact-section">
-              <i class="material-icons opacity-6 me-2 text-md" >mail</i>
+              <i class="material-icons  me-2 text-md" >mail</i>
               Contact
             </a>
           </li>
           <!-- <li class="nav-item dropdown dropdown-hover mx-2">
             <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" href="{% url 'register' %}">
-              <i class="material-icons opacity-6 me-2 text-md" >person_add</i>
+              <i class="material-icons  me-2 text-md" >person_add</i>
               Register
             </a>
           </li> -->
 
           <li class="nav-item dropdown dropdown-hover mx-2">
             <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" href="{% url 'login' %}">
-              <i class="material-icons opacity-6 me-2 text-md" >fingerprint</i>
+              <i class="material-icons  me-2 text-md" >fingerprint</i>
               Login
             </a>
           </li>
