--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar" data-color="purple" data-background-color="white" data-image="/static/assets/img/sidebar-1.jpg">
   <div class="logo">
-    <a target="" rel="noopener noreferrer" href="{% url 'landing' %}" class="simple-text logo-normal">
+    <a target="" rel="noopener noreferrer" class="simple-text logo-normal">
       Geo Database
     </a>
   </div>
@@ -88,6 +88,12 @@
         </div>
       </li>
       {% else %}
+      <li class="nav-item {% if request.path == '/landing' %} active {% endif %}">
+        <a class="nav-link" href="{% url 'landing' %}">
+          <i class="material-icons">home</i>
+          <p>Home</p>
+        </a>
+      </li>
       <li class="nav-item {% if request.path == '/accounts/login' %} active {% endif %}">
         <a class="nav-link" href="{% url 'generaltools' %}">
           <i class="material-icons">widgets</i>
