--- a/apps/templates/pages/blog.html
+++ b/apps/templates/pages/blog.html
@@ -23,7 +23,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="mb-5">Check our tools</h3>
+          <h3 class="mb-5">Check our online library of geotechnical tools
+          </h3>
         </div>
       </div>
       <div class="row">
@@ -44,7 +45,7 @@
                 geodata files or the files
                 you received.
               </p>
-              <a href="{% url 'AGSValidator' %}"  class="text-info text-sm icon-move-right">Validate
+              <a href="{% url 'AGSValidator' %}"  class="text-info text-sm icon-move-right">Run the app
                 <i class="fas fa-arrow-right text-xs ms-1" aria-hidden="true"></i>
               </a>
             </div>
@@ -71,7 +72,7 @@
                 ags
                 format) to excel
               </p>
-              <a href="{% url 'AGSToExcel' %}" class="text-info text-sm icon-move-right">Convert
+              <a href="{% url 'AGSToExcel' %}" class="text-info text-sm icon-move-right">Run the app
                 <i class="fas fa-arrow-right text-xs ms-1" aria-hidden="true"></i>
               </a>
             </div>
@@ -92,7 +93,7 @@
               <p>
                 Exlore your data, manage and decode in few minutes
               </p>
-              <a href="{% url 'login' %}" class="text-info text-sm icon-move-right">Read More
+              <a href="{% url 'login' %}" class="text-info text-sm icon-move-right">Run the app
                 <i class="fas fa-arrow-right text-xs ms-1" aria-hidden="true"></i>
               </a>
             </div>
