--- a/apps/templates/pages/landing.html
+++ b/apps/templates/pages/landing.html
@@ -48,6 +48,10 @@
   .pe-5 {
     padding-right: 4rem !important;
     padding-left: 4rem;
+  }
+
+  span.number {
+  font-size: 1.1rem;
 }
 </style>
 {% endblock css %}
@@ -55,7 +59,7 @@
 
 <div class="page-header align-items-start min-vh-100"
   style="background-image: url('/static/assets-landing/img/bg.jpg');" loading="lazy">
-  <span class="mask bg-gradient-dark opacity-6"></span>
+  <span class="mask bg-gradient-dark "></span>
   <div class="container" style="margin-top:20%;">
     <div class="row justify-content-center">
       <div class="col-lg-8 text-center mx-auto my-auto">
@@ -78,7 +82,7 @@
           <div class="row justify-content-start">
             <div class="col-md-6">
               <div class="info">
-                <i class="material-icons text-3xl text-gradient text-info mb-3">explore</i>
+                <i class="material-icons text-3xl text-gradient text-info mb-3">layers</i>
                 <h5>Decode</h5>
                 <p>On the fly, in depth analysis of large
                   geotechnical data sets. Evaluate and view
@@ -89,7 +93,7 @@
             </div>
             <div class="col-md-6">
               <div class="info">
-                <i class="material-icons text-3xl text-gradient text-info mb-3">manage_search</i>
+                <i class="material-icons text-3xl text-gradient text-info mb-3">leaderboards</i>
                 <h5>Manage</h5>
                 <p>Manage your geodata in a
                   completely new way. Forget PDF
@@ -100,7 +104,7 @@
           <div class="row justify-content-start mt-4">
             <div class="col-md-6">
               <div class="info">
-                <i class="material-icons text-3xl text-gradient text-info mb-3">save</i>
+                <i class="material-icons text-3xl text-gradient text-info mb-3">sd_storage</i>
                 <h5>Store</h5>
                 <p>Store your geodata with us in secure and centerlize cloud database.
                   Harvest the power of deep data analysis and turn your current geo data into knowledge. Store to use,
@@ -147,72 +151,58 @@
   <!-- -------- START PRE-FOOTER 1 w/ SUBSCRIBE BUTTON AND IMAGE ------- -->
   <section class="py-3 mt-1">
     <div class="container-fluid px-0">
-      <div class="row justify-content-center text-center">
+      <div class="row">
         <div class="col-12 position-relative">
           <div class="row bg-gray-100 bottom-0 py-7">
-            <div class="col-lg-6 my-auto">
-              <h2 class="card-title">Geo-consulting</h2>
-              <p class="pe-5">With focus on <strong>safety</strong>, <strong>sustainability</strong> and <strong>efficiency</strong>, <br>we offer tailored made geoconsulting
-                services. Our geoscientists, engineers and experts combine data analysis with deep knowledge of geotechnical
+            <div class="col-lg-5 my-auto">
+              <h2 class="card-title pe-5">Geo-consulting</h2>
+              <p class="pe-5">With focus on safety,sustainability and efficiency, we offer tailored made
+                geoconsulting
+                services. Our geoscientists, engineers and experts combine data analysis with deep knowledge of
+                geotechnical
                 engineering to provide comprehensive solutions for your projects. </p>
               <p class="pe-5">Experience geotechnical engineering of
-                the 21st century. Harvest the power of automation, parametrization and machine learning. Harvest the power of your
+                the 21st century. Harvest the power of automation, parametrization and machine learning. Harvest the
+                power of your
                 geodata.
               </p>
             </div>
-            <div class="col-lg-3 mt-lg-0 mt-5 ps-lg-0 ps-0">
+            <div class="col-lg-4 mt-lg-0 mt-5 ps-lg-0 ps-0">
               <div class="p-3 info-horizontal">
-                <div class="icon icon-shape  bg-gradient-primary shadow-primary text-center">
-                  <i class="fas fa-globe opacity-10"></i>
-                </div>
                 <div class="description ps-3">
-                  <p class="mb-0">Site characterization and geohazard studies </p>
+                  <p class="mb-0"><span class=number>1. </span>Site characterization and geohazard studies </p>
                 </div>
               </div>
               <div class="p-3 info-horizontal">
-                <div class="icon icon-shape  bg-gradient-primary shadow-primary text-center">
-                  <i class="fas fa-user opacity-10"></i>
-                </div>
                 <div class="description ps-3">
-                  <p class="mb-0">Advanced numerical modelling and analysis using 2D/3D finite elements.</p>
+                  <p class="mb-0"><span class=number>2. </span>Advanced numerical modelling and analysis using 2D/3D finite elements.</p>
                 </div>
               </div>
-
               <div class="p-3 info-horizontal">
-                <div class="icon icon-shape  bg-gradient-primary shadow-primary text-center">
-                  <i class="fas fa-map opacity-10"></i>
-                </div>
                 <div class="description ps-3">
-                  <p class="mb-0">Slope stability analysis.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 mt-lg-0 mt-5 ps-lg-0 ps-0">
-              <div class="p-3 info-horizontal">
-                <div class="icon icon-shape  bg-gradient-primary shadow-primary text-center">
-                  <i class="fas fa-ship opacity-10"></i>
-                </div>
-                <div class="description ps-3">
-                  <p class="mb-0">Foundation design / shoring design.</p>
-                </div>
-              </div>
-
-
-              <div class="p-3 info-horizontal">
-                <div class="icon icon-shape  bg-gradient-primary shadow-primary text-center">
-                  <i class="fas fa-hourglass opacity-10"></i>
-                </div>
-                <div class="description ps-3">
-                  <p class="mb-0">Soil improvement recommendations and design
+                  <p class="mb-0"><span class=number>3. </span>Soil improvement recommendations and design
                     Blackgold.</p>
                 </div>
               </div>
+
+            </div>
+            <div class="col-lg-3 mt-lg-0 mt-5 ps-lg-0 ps-0">
               <div class="p-3 info-horizontal">
-                <div class="icon icon-shape  bg-gradient-primary shadow-primary text-center">
-                  <i class="fas fa-handshake opacity-10"></i>
-                </div>
                 <div class="description ps-3">
-                  <p class="mb-0">Data analysis and interpretation.</p>
+                  <p class="mb-0"><span class=number>4. </span>Foundation design / shoring design.</p>
+                </div>
+              </div>
+
+
+
+              <div class="p-3 info-horizontal">
+                <div class="description ps-3">
+                  <p class="mb-0"><span class=number>5. </span>Data analysis and interpretation.</p>
+                </div>
+              </div>
+              <div class="p-3 info-horizontal">
+                <div class="description ps-3">
+                  <p class="mb-0"><span class=number>6. </span>Slope stability analysis.</p>
                 </div>
               </div>
             </div>
