--- a/apps/templates/layouts/base-login.html
+++ b/apps/templates/layouts/base-login.html
@@ -11,6 +11,9 @@
   <meta name="keywords" content="Orycta, Orycta Data Management, Orycta Consulting, Orycta Geotechnical, AGS geotechnical data, Geotechnical Engineering Consulting, Geotechnical Automation">
   <meta name="description" content="Orycta Data Management and Geoconsulting. In-depth analysis of geotechnical data. Unlock the science. Decode your geo-data.">
   {% endblock %}
+  <link rel="" sizes="76x76" href="/static/assets-landing/img/logos/logometa.jpg">
+  <link rel="" type="image/png" href="/static/assets-landing/img/logos/logometa.jpg">
+  <link rel="shortcut icon" href="/static/assets-landing/img/logos/favicon.ico" type="image/x-icon">
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css"
     href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
