--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -15,6 +15,14 @@
   </title>
   
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+  {% block meta %}
+  <title>Orycta</title>
+  <meta name="keywords" content="Orycta, Orycta Data Management, Orycta Consulting, Orycta Geotechnical, AGS geotechnical data, Geotechnical Engineering Consulting, Geotechnical Automation">
+  <meta name="description" content="Orycta Data Management and Geoconsulting. In-depth analysis of geotechnical data. Unlock the science. Decode your geo-data.">
+  {% endblock %}
+  <link rel="" sizes="76x76" href="/static/assets-landing/img/logos/logometa.jpg">
+  <link rel="" type="image/png" href="/static/assets-landing/img/logos/logometa.jpg">
+  <link rel="shortcut icon" href="/static/assets-landing/img/logos/favicon.ico" type="image/x-icon">
   <!--     Fonts and icons     -->
   <link rel="stylesheet" href="/static/assets/font/Geomanist-Light-Webfont/geomanist-light-webfont.ttf" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
